[project]
name = "ml-explorer"
version = "0.1.0"
description = ""
authors = [
    {name = "Esteb"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "notebook (>=7.4.2,<8.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "numpy (==1.23.5)",
    "pandas (==1.5.3)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "scikit-learn-extra (>=0.3.0,<0.4.0)",
    "umap-learn (>=0.5.7,<0.6.0)",
    "prettytable (>=3.16.0,<4.0.0)",
    "joblib (>=1.3.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
